# teacher_salaries

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  TODO.md  analyze_agent_results.ipynb  pyproject.toml  test_agent.ipynb  test_analytics.ipynb  test_ground.ipynb  train_analytics.py
.github/workflows/: data_update.yml
app/: app.py  requirements.txt
app/salary_data/: scraper.py
artifacts/: anomalies.parquet  clusters.parquet
docs/: advanced_analytics_spec.md  agent_robustness_plan.md  data_journalist_plan.md  deployment_automation.md  salary_app.md  scraper.md
notebooks/: analyze_agent_results.ipynb  test_agent.ipynb  test_analytics.ipynb  test_ground.ipynb
plots/: twitter_thread.md
reports/: cluster_analysis_report.md  cluster_analysis_report_es.md  executive_summary.md
scripts/: run_evaluation.py  train_analytics.py  update_data.py
src/: app.py  salary_app.py
src/assets/: style.css
src/components/: chat_interface.py
src/salary_data/: agent.py  analytics.py  guardrails.py  loader.py  scraper.py
tests/: eval_dataset.jsonl  test_analytics.py  test_app_logic.py  test_salary_app.py  test_scraper.py
