[tool.poetry]
name = "salary-dashboard"
version = "0.1.0"
description = "Dashboard for teacher salary analysis in Argentina"
authors = ["Juan Ignacio Beiroa"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [{include = "salary_dashboard"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core Framework & UI
dash = "^2.14"
dash-bootstrap-components = "^1.5"
dash-ag-grid = "^31.0"
# Data Processing
pandas = "^2.0"
numpy = ">=2.1.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
pyarrow = "^23.0.1"
requests = "^2.31.0"
# AWS & Storage
boto3 = "^1.42.65"
apig-wsgi = "^2.16.0"
# LLM & Agent
langchain = "^1.2.10"
langchain-community = "^0.4.1"
langchain-experimental = "^0.4.1"
langchain-litellm = "^0.6.1"
langchain-openai = "^1.1.11"
langchain-aws = "^1.4.0"
langchain-ollama = "^1.0.1"
litellm = "^1.81.16"
# Utilities
python-dotenv = "^1.2.1"
gunicorn = "^21.2.0"
tabulate = "^0.9.0"

[tool.poetry.group.analytics.dependencies]
tslearn = "^0.8.0"
scikit-learn = "^1.8.0"
mlflow = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-mock = ">=3.15.1,<4.0.0"
kaleido = ">=1.2.0,<2.0.0"
ruff = ">=0.9.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
